// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// This protobuf file defines the types we store in the Stash.
//
// Before and after modifying this file, make sure you have a snapshot of the before version,
// e.g. a copy of this file named 'objects_v{CATALOG_VERSION}.proto', and a snapshot of the file
// after your modifications, e.g. 'objects_v{CATALOG_VERSION + 1}.proto'. Then you can write a
// migration using these two files, and no matter how the types change in the future, we'll always
// have these snapshots to facilitate the migration.

// buf breaking: ignore (does currently not require backward-compatibility)

syntax = "proto3";

package objects_v77;

message ConfigKey {
  string key = 1;
}

message ConfigValue {
  uint64 value = 1;
}

message SettingKey {
  string name = 1;
}

message SettingValue {
  string value = 1;
}

message IdAllocKey {
  string name = 1;
}

message IdAllocValue {
  uint64 next_id = 1;
}

message GidMappingKey {
  string schema_name = 1;
  CatalogItemType object_type = 2;
  string object_name = 3;
}

message GidMappingValue {
  // TODO(parkmycar): Ideally this is a SystemCatalogItemId but making this change panics 0dt
  // upgrades if there were new builtin objects added since the older version of Materialize
  // doesn't know how to read the new SystemCatalogItemId type.
  uint64 id = 1;
  string fingerprint = 2;
  SystemGlobalId global_id = 3;
}

message ClusterKey {
  ClusterId id = 1;
}

message ClusterValue {
  reserved 2;
  string name = 1;
  RoleId owner_id = 3;
  repeated MzAclItem privileges = 4;
  ClusterConfig config = 5;
}

message ClusterIntrospectionSourceIndexKey {
  ClusterId cluster_id = 1;
  string name = 2;
}

message ClusterIntrospectionSourceIndexValue {
  // TODO(parkmycar): Ideally this is a IntrospectionSourceCatalogItemId but making this change panics 0dt
  // upgrades if there were new builtin objects added since the older version of Materialize
  // doesn't know how to read the new IntrospectionSourceCatalogItemId type.
  uint64 index_id = 1;
  uint32 oid = 2;
  IntrospectionSourceIndexGlobalId global_id = 3;
}

message ClusterReplicaKey {
  ReplicaId id = 1;
}

message ClusterReplicaValue {
  ClusterId cluster_id = 1;
  string name = 2;
  ReplicaConfig config = 3;
  RoleId owner_id = 4;
}

message DatabaseKey {
  DatabaseId id = 1;
}

message DatabaseValue {
  string name = 1;
  RoleId owner_id = 2;
  repeated MzAclItem privileges = 3;
  uint32 oid = 4;
}

message SchemaKey {
  SchemaId id = 1;
}

message SchemaValue {
  DatabaseId database_id = 1;
  string name = 2;
  RoleId owner_id = 3;
  repeated MzAclItem privileges = 4;
  uint32 oid = 5;
}

message ItemKey {
  CatalogItemId gid = 1;
}

message ItemValue {
  SchemaId schema_id = 1;
  string name = 2;
  CatalogItem definition = 3;
  RoleId owner_id = 4;
  repeated MzAclItem privileges = 5;
  uint32 oid = 6;
  GlobalId global_id = 7;
  repeated ItemVersion extra_versions = 8;
}

message ItemVersion {
  GlobalId global_id = 1;
  Version version = 2;
}

message RoleKey {
  RoleId id = 1;
}

message RoleValue {
  string name = 1;
  RoleAttributes attributes = 2;
  RoleMembership membership = 3;
  RoleVars vars = 4;
  uint32 oid = 5;
}

message RoleAuthKey {
  RoleId id = 1;
}

message RoleAuthValue {
  optional string password_hash = 1;
  EpochMillis updated_at = 2;
}

message NetworkPolicyKey {
  NetworkPolicyId id = 1;
}

message NetworkPolicyValue {
  string name = 1;
  repeated NetworkPolicyRule rules = 2;
  RoleId owner_id = 3;
  repeated MzAclItem privileges = 4;
  uint32 oid = 5;
}

message ServerConfigurationKey {
  string name = 1;
}

message ServerConfigurationValue {
  string value = 1;
}

message AuditLogKey {
  oneof event {
    AuditLogEventV1 v1 = 1;
  }
}

message CommentKey {
  oneof object {
    CatalogItemId table = 1;
    CatalogItemId view = 2;
    CatalogItemId materialized_view = 4;
    CatalogItemId source = 5;
    CatalogItemId sink = 6;
    CatalogItemId index = 7;
    CatalogItemId func = 8;
    CatalogItemId connection = 9;
    CatalogItemId type = 10;
    CatalogItemId secret = 11;
    CatalogItemId continual_task = 17;
    RoleId role = 12;
    DatabaseId database = 13;
    ResolvedSchema schema = 14;
    ClusterId cluster = 15;
    ClusterReplicaId cluster_replica = 16;
    NetworkPolicyId network_policy = 18;
  }
  oneof sub_component {
    uint64 column_pos = 3;
  }
}

message CommentValue {
  string comment = 1;
}

message SourceReferencesKey {
  CatalogItemId source = 1;
}

message SourceReferencesValue {
  repeated SourceReference references = 1;
  EpochMillis updated_at = 2;
}

message SourceReference {
  string name = 1;
  optional string namespace = 2;
  repeated string columns = 3;
}

message StorageCollectionMetadataKey {
  GlobalId id = 1;
}

// This value is stored transparently, however, it should only ever be
// manipulated by the storage controller.
message StorageCollectionMetadataValue {
  string shard = 1;
}

// This value is stored transparently, however, it should only ever be
// manipulated by the storage controller.
message UnfinalizedShardKey {
  string shard = 1;
}

// This value is stored transparently, however, it should only ever be
// manipulated by the storage controller.
message TxnWalShardValue {
  string shard = 1;
}

// ---- Common Types
//
// Note: Normally types like this would go in some sort of `common.proto` file, but we want to keep
// our proto definitions in a single file to make snapshotting easier, hence them living here.

message Empty {
  /* purposefully empty */
}

// In protobuf a "None" string is the same thing as an empty string. To get the same semantics of
// an `Option<String>` from Rust, we need to wrap a string in a message.
message StringWrapper {
  string inner = 1;
}

message Duration {
  uint64 secs = 1;
  uint32 nanos = 2;
}

message EpochMillis {
  uint64 millis = 1;
}

// Opaque timestamp type that is specific to Materialize.
message Timestamp {
  uint64 internal = 1;
}

message Version {
  uint64 value = 2;
}

enum CatalogItemType {
  CATALOG_ITEM_TYPE_UNKNOWN = 0;
  CATALOG_ITEM_TYPE_TABLE = 1;
  CATALOG_ITEM_TYPE_SOURCE = 2;
  CATALOG_ITEM_TYPE_SINK = 3;
  CATALOG_ITEM_TYPE_VIEW = 4;
  CATALOG_ITEM_TYPE_MATERIALIZED_VIEW = 5;
  CATALOG_ITEM_TYPE_INDEX = 6;
  CATALOG_ITEM_TYPE_TYPE = 7;
  CATALOG_ITEM_TYPE_FUNC = 8;
  CATALOG_ITEM_TYPE_SECRET = 9;
  CATALOG_ITEM_TYPE_CONNECTION = 10;
  CATALOG_ITEM_TYPE_CONTINUAL_TASK = 11;
}

message CatalogItem {
  message V1 {
    string create_sql = 1;
  }

  oneof value {
    V1 v1 = 1;
  }
}

message CatalogItemId {
  oneof value {
    uint64 system = 1;
    uint64 user = 2;
    uint64 transient = 3;
    uint64 introspection_source_index = 4;
  }
}

/// A newtype wrapper for a `CatalogItemId` that is always in the "system" namespace.
message SystemCatalogItemId {
  uint64 value = 1;
}

/// A newtype wrapper for a `CatalogItemId` that is always in the "introspection source index" namespace.
message IntrospectionSourceIndexCatalogItemId {
  uint64 value = 1;
}

message GlobalId {
  oneof value {
    uint64 system = 1;
    uint64 user = 2;
    uint64 transient = 3;
    Empty explain = 4;
    uint64 introspection_source_index = 5;
  }
}

/// A newtype wrapper for a `GlobalId` that is always in the "system" namespace.
message SystemGlobalId {
  uint64 value = 1;
}

/// A newtype wrapper for a `GlobalId` that is always in the "introspection source index" namespace.
message IntrospectionSourceIndexGlobalId {
  uint64 value = 1;
}

message ClusterId {
  oneof value {
    uint64 system = 1;
    uint64 user = 2;
  }
}

message DatabaseId {
  oneof value {
    uint64 system = 1;
    uint64 user = 2;
  }
}

message ResolvedDatabaseSpecifier {
  oneof spec {
    Empty ambient = 1;
    DatabaseId id = 2;
  }
}

message SchemaId {
  oneof value {
    uint64 system = 1;
    uint64 user = 2;
  }
}

message SchemaSpecifier {
  oneof spec {
    Empty temporary = 1;
    SchemaId id = 2;
  }
}

message ResolvedSchema {
  ResolvedDatabaseSpecifier database = 1;
  SchemaSpecifier schema = 2;
}

message ReplicaId {
  oneof value {
    uint64 system = 1;
    uint64 user = 2;
  }
}

message ClusterReplicaId {
  ClusterId cluster_id = 1;
  ReplicaId replica_id = 2;
}

message NetworkPolicyId {
  oneof value {
    uint64 system = 1;
    uint64 user = 2;
  }
}

message ReplicaLogging {
  bool log_logging = 1;
  Duration interval = 2;
}

message OptimizerFeatureOverride {
  string name = 1;
  string value = 2;
}

message ClusterScheduleRefreshOptions {
  Duration rehydration_time_estimate = 1;
}

message ClusterSchedule {
  oneof value {
    Empty manual = 1;
    ClusterScheduleRefreshOptions refresh = 2;
  }
}

message ClusterConfig {
  message ManagedCluster {
    string size = 1;
    uint32 replication_factor = 2;
    repeated string availability_zones = 3;
    ReplicaLogging logging = 4;
    repeated OptimizerFeatureOverride optimizer_feature_overrides = 7;
    ClusterSchedule schedule = 8;
  }

  oneof variant {
    Empty unmanaged = 1;
    ManagedCluster managed = 2;
  }
  optional string workload_class = 3;
}

message ReplicaConfig {
  message UnmanagedLocation {
    repeated string storagectl_addrs = 1;
    repeated string computectl_addrs = 3;
  }

  message ManagedLocation {
    string size = 1;
    optional string availability_zone = 2;
    bool internal = 5;
    optional string billed_as = 6;
    bool pending = 7;
  }

  oneof location {
    UnmanagedLocation unmanaged = 1;
    ManagedLocation managed = 2;
  }
  ReplicaLogging logging = 3;
}

message RoleId {
  oneof value {
    uint64 system = 1;
    uint64 user = 2;
    Empty public = 3;
    uint64 predefined = 4;
  }
}

message RoleAttributes {
  bool inherit = 1;
  optional bool superuser = 2;
  optional bool login = 3;
}

message RoleMembership {
  message Entry {
    RoleId key = 1;
    RoleId value = 2;
  }

  repeated Entry map = 1;
}

message RoleVars {
  message SqlSet {
    repeated string entries = 1;
  }

  message Entry {
    string key = 1;
    oneof val {
      string flat = 2;
      SqlSet sql_set = 3;
    }
  }

  repeated Entry entries = 1;
}

message NetworkPolicyRule {
  string name = 1;
  oneof action {
    Empty allow = 2;
  }
  oneof direction {
    Empty ingress = 3;
  }
  string address = 4;
}

message AclMode {
  // A bit flag representing all the privileges that can be granted to a role.
  uint64 bitflags = 1;
}

message MzAclItem {
  RoleId grantee = 1;
  RoleId grantor = 2;
  AclMode acl_mode = 3;
}

enum ObjectType {
  OBJECT_TYPE_UNKNOWN = 0;
  OBJECT_TYPE_TABLE = 1;
  OBJECT_TYPE_VIEW = 2;
  OBJECT_TYPE_MATERIALIZED_VIEW = 3;
  OBJECT_TYPE_SOURCE = 4;
  OBJECT_TYPE_SINK = 5;
  OBJECT_TYPE_INDEX = 6;
  OBJECT_TYPE_TYPE = 7;
  OBJECT_TYPE_ROLE = 8;
  OBJECT_TYPE_CLUSTER = 9;
  OBJECT_TYPE_CLUSTER_REPLICA = 10;
  OBJECT_TYPE_SECRET = 11;
  OBJECT_TYPE_CONNECTION = 12;
  OBJECT_TYPE_DATABASE = 13;
  OBJECT_TYPE_SCHEMA = 14;
  OBJECT_TYPE_FUNC = 15;
  OBJECT_TYPE_CONTINUAL_TASK = 16;
  OBJECT_TYPE_NETWORK_POLICY = 17;
}

message DefaultPrivilegesKey {
  RoleId role_id = 1;
  DatabaseId database_id = 2;
  SchemaId schema_id = 3;
  ObjectType object_type = 4;
  RoleId grantee = 5;
}

message DefaultPrivilegesValue {
  AclMode privileges = 1;
}

message SystemPrivilegesKey {
  RoleId grantee = 1;
  RoleId grantor = 2;
}

message SystemPrivilegesValue {
  AclMode acl_mode = 1;
}

message AuditLogEventV1 {
  enum EventType {
    EVENT_TYPE_UNKNOWN = 0;
    EVENT_TYPE_CREATE = 1;
    EVENT_TYPE_DROP = 2;
    EVENT_TYPE_ALTER = 3;
    EVENT_TYPE_GRANT = 4;
    EVENT_TYPE_REVOKE = 5;
    EVENT_TYPE_COMMENT = 6;
  }

  enum ObjectType {
    OBJECT_TYPE_UNKNOWN = 0;
    OBJECT_TYPE_CLUSTER = 1;
    OBJECT_TYPE_CLUSTER_REPLICA = 2;
    OBJECT_TYPE_CONNECTION = 3;
    OBJECT_TYPE_DATABASE = 4;
    OBJECT_TYPE_FUNC = 5;
    OBJECT_TYPE_INDEX = 6;
    OBJECT_TYPE_MATERIALIZED_VIEW = 7;
    OBJECT_TYPE_ROLE = 8;
    OBJECT_TYPE_SECRET = 9;
    OBJECT_TYPE_SCHEMA = 10;
    OBJECT_TYPE_SINK = 11;
    OBJECT_TYPE_SOURCE = 12;
    OBJECT_TYPE_TABLE = 13;
    OBJECT_TYPE_TYPE = 14;
    OBJECT_TYPE_VIEW = 15;
    OBJECT_TYPE_SYSTEM = 16;
    OBJECT_TYPE_CONTINUAL_TASK = 17;
    OBJECT_TYPE_NETWORK_POLICY = 18;
  }

  message IdFullNameV1 {
    string id = 1;
    FullNameV1 name = 2;
  }

  message FullNameV1 {
    string database = 1;
    string schema = 2;
    string item = 3;
  }

  message IdNameV1 {
    string id = 1;
    string name = 2;
  }

  message RenameClusterV1 {
    string id = 1;
    string old_name = 2;
    string new_name = 3;
  }

  message RenameClusterReplicaV1 {
    string cluster_id = 1;
    string replica_id = 2;
    string old_name = 3;
    string new_name = 4;
  }

  message RenameItemV1 {
    string id = 1;
    FullNameV1 old_name = 2;
    FullNameV1 new_name = 3;
  }

  message CreateClusterReplicaV1 {
    string cluster_id = 1;
    string cluster_name = 2;
    StringWrapper replica_id = 3;
    string replica_name = 4;
    string logical_size = 5;
    bool disk = 6;
    optional string billed_as = 7;
    bool internal = 8;
  }

  message CreateClusterReplicaV2 {
    string cluster_id = 1;
    string cluster_name = 2;
    StringWrapper replica_id = 3;
    string replica_name = 4;
    string logical_size = 5;
    bool disk = 6;
    optional string billed_as = 7;
    bool internal = 8;
    CreateOrDropClusterReplicaReasonV1 reason = 9;
    SchedulingDecisionsWithReasonsV1 scheduling_policies = 10;
  }

  message CreateClusterReplicaV3 {
    string cluster_id = 1;
    string cluster_name = 2;
    StringWrapper replica_id = 3;
    string replica_name = 4;
    string logical_size = 5;
    bool disk = 6;
    optional string billed_as = 7;
    bool internal = 8;
    CreateOrDropClusterReplicaReasonV1 reason = 9;
    SchedulingDecisionsWithReasonsV2 scheduling_policies = 10;
  }

  message CreateClusterReplicaV4 {
    string cluster_id = 1;
    string cluster_name = 2;
    StringWrapper replica_id = 3;
    string replica_name = 4;
    string logical_size = 5;
    optional string billed_as = 6;
    bool internal = 7;
    CreateOrDropClusterReplicaReasonV1 reason = 8;
    SchedulingDecisionsWithReasonsV2 scheduling_policies = 9;
  }

  message DropClusterReplicaV1 {
    string cluster_id = 1;
    string cluster_name = 2;
    StringWrapper replica_id = 3;
    string replica_name = 4;
  }

  message DropClusterReplicaV2 {
    string cluster_id = 1;
    string cluster_name = 2;
    StringWrapper replica_id = 3;
    string replica_name = 4;
    CreateOrDropClusterReplicaReasonV1 reason = 5;
    SchedulingDecisionsWithReasonsV1 scheduling_policies = 6;
  }

  message DropClusterReplicaV3 {
    string cluster_id = 1;
    string cluster_name = 2;
    StringWrapper replica_id = 3;
    string replica_name = 4;
    CreateOrDropClusterReplicaReasonV1 reason = 5;
    SchedulingDecisionsWithReasonsV2 scheduling_policies = 6;
  }

  message CreateOrDropClusterReplicaReasonV1 {
    oneof reason {
      Empty Manual = 1;
      Empty Schedule = 2;
      Empty System = 3;
    }
  }

  message SchedulingDecisionsWithReasonsV1 {
    RefreshDecisionWithReasonV1 on_refresh = 1;
  }

  message SchedulingDecisionsWithReasonsV2 {
    RefreshDecisionWithReasonV2 on_refresh = 1;
  }

  message RefreshDecisionWithReasonV1 {
    oneof decision {
      Empty On = 1;
      Empty Off = 2;
    }
    repeated string objects_needing_refresh = 3;
    string rehydration_time_estimate = 4;
  }

  message RefreshDecisionWithReasonV2 {
    oneof decision {
      Empty On = 1;
      Empty Off = 2;
    }
    repeated string objects_needing_refresh = 3;
    repeated string objects_needing_compaction = 5;
    string rehydration_time_estimate = 4;
  }

  message CreateSourceSinkV1 {
    string id = 1;
    FullNameV1 name = 2;
    StringWrapper size = 3;
  }

  message CreateSourceSinkV2 {
    string id = 1;
    FullNameV1 name = 2;
    StringWrapper size = 3;
    string external_type = 4;
  }

  message CreateSourceSinkV3 {
    string id = 1;
    FullNameV1 name = 2;
    string external_type = 3;
  }

  message CreateSourceSinkV4 {
    string id = 1;
    StringWrapper cluster_id = 2;
    FullNameV1 name = 3;
    string external_type = 4;
  }

  message CreateIndexV1 {
    string id = 1;
    string cluster_id = 2;
    FullNameV1 name = 3;
  }

  message CreateMaterializedViewV1 {
    string id = 1;
    string cluster_id = 2;
    FullNameV1 name = 3;
  }

  message AlterSourceSinkV1 {
    string id = 1;
    FullNameV1 name = 2;
    StringWrapper old_size = 3;
    StringWrapper new_size = 4;
  }

  message AlterSetClusterV1 {
    string id = 1;
    FullNameV1 name = 2;
    StringWrapper old_cluster = 3;
    StringWrapper new_cluster = 4;
  }

  message GrantRoleV1 {
    string role_id = 1;
    string member_id = 2;
    string grantor_id = 3;
  }

  message GrantRoleV2 {
    string role_id = 1;
    string member_id = 2;
    string grantor_id = 3;
    string executed_by = 4;
  }

  message RevokeRoleV1 {
    string role_id = 1;
    string member_id = 2;
  }

  message RevokeRoleV2 {
    string role_id = 1;
    string member_id = 2;
    string grantor_id = 3;
    string executed_by = 4;
  }

  message UpdatePrivilegeV1 {
    string object_id = 1;
    string grantee_id = 2;
    string grantor_id = 3;
    string privileges = 4;
  }

  message AlterDefaultPrivilegeV1 {
    string role_id = 1;
    StringWrapper database_id = 2;
    StringWrapper schema_id = 3;
    string grantee_id = 4;
    string privileges = 5;
  }

  message UpdateOwnerV1 {
    string object_id = 1;
    string old_owner_id = 2;
    string new_owner_id = 3;
  }

  message SchemaV1 {
    string id = 1;
    string name = 2;
    string database_name = 3;
  }

  message SchemaV2 {
    string id = 1;
    string name = 2;
    StringWrapper database_name = 3;
  }

  message RenameSchemaV1 {
    string id = 1;
    optional string database_name = 2;
    string old_name = 3;
    string new_name = 4;
  }

  message UpdateItemV1 {
    string id = 1;
    FullNameV1 name = 2;
  }

  message AlterRetainHistoryV1 {
    string id = 1;
    optional string old_history = 2;
    optional string new_history = 3;
  }

  message ToNewIdV1 {
    string id = 1;
    string new_id = 2;
  }

  message FromPreviousIdV1 {
    string id = 1;
    string previous_id = 2;
  }

  message SetV1 {
    string name = 1;
    optional string value = 2;
  }

  message RotateKeysV1 {
    string id = 1;
    string name = 2;
  }

  uint64 id = 1;
  EventType event_type = 2;
  ObjectType object_type = 3;
  StringWrapper user = 4;
  EpochMillis occurred_at = 5;

  oneof details {
    CreateClusterReplicaV1 create_cluster_replica_v1 = 6;
    CreateClusterReplicaV2 create_cluster_replica_v2 = 33;
    CreateClusterReplicaV3 create_cluster_replica_v3 = 41;
    CreateClusterReplicaV4 create_cluster_replica_v4 = 43;
    DropClusterReplicaV1 drop_cluster_replica_v1 = 7;
    DropClusterReplicaV2 drop_cluster_replica_v2 = 34;
    DropClusterReplicaV3 drop_cluster_replica_v3 = 42;
    CreateSourceSinkV1 create_source_sink_v1 = 8;
    CreateSourceSinkV2 create_source_sink_v2 = 9;
    AlterSourceSinkV1 alter_source_sink_v1 = 10;
    AlterSetClusterV1 alter_set_cluster_v1 = 25;
    GrantRoleV1 grant_role_v1 = 11;
    GrantRoleV2 grant_role_v2 = 12;
    RevokeRoleV1 revoke_role_v1 = 13;
    RevokeRoleV2 revoke_role_v2 = 14;
    UpdatePrivilegeV1 update_privilege_v1 = 22;
    AlterDefaultPrivilegeV1 alter_default_privilege_v1 = 23;
    UpdateOwnerV1 update_owner_v1 = 24;
    IdFullNameV1 id_full_name_v1 = 15;
    RenameClusterV1 rename_cluster_v1 = 20;
    RenameClusterReplicaV1 rename_cluster_replica_v1 = 21;
    RenameItemV1 rename_item_v1 = 16;
    IdNameV1 id_name_v1 = 17;
    SchemaV1 schema_v1 = 18;
    SchemaV2 schema_v2 = 19;
    RenameSchemaV1 rename_schema_v1 = 27;
    UpdateItemV1 update_item_v1 = 26;
    CreateSourceSinkV3 create_source_sink_v3 = 29;
    AlterRetainHistoryV1 alter_retain_history_v1 = 30;
    ToNewIdV1 to_new_id_v1 = 31;
    FromPreviousIdV1 from_previous_id_v1 = 32;
    SetV1 set_v1 = 35;
    Empty reset_all_v1 = 36;
    RotateKeysV1 rotate_keys_v1 = 37;
    CreateSourceSinkV4 create_source_sink_v4 = 38;
    CreateIndexV1 create_index_v1 = 39;
    CreateMaterializedViewV1 create_materialized_view_v1 = 40;
  }
}

// Wrapper of key-values used by the persist implementation to serialize the catalog.
message StateUpdateKind {
  reserved "Epoch";

  message AuditLog {
    AuditLogKey key = 1;
  }

  message Cluster {
    ClusterKey key = 1;
    ClusterValue value = 2;
  }

  message ClusterReplica {
    ClusterReplicaKey key = 1;
    ClusterReplicaValue value = 2;
  }

  message Comment {
    CommentKey key = 1;
    CommentValue value = 2;
  }

  message Config {
    ConfigKey key = 1;
    ConfigValue value = 2;
  }

  message Database {
    DatabaseKey key = 1;
    DatabaseValue value = 2;
  }

  message DefaultPrivileges {
    DefaultPrivilegesKey key = 1;
    DefaultPrivilegesValue value = 2;
  }

  message FenceToken {
    uint64 deploy_generation = 1;
    int64 epoch = 2;
  }

  message IdAlloc {
    IdAllocKey key = 1;
    IdAllocValue value = 2;
  }

  message ClusterIntrospectionSourceIndex {
    ClusterIntrospectionSourceIndexKey key = 1;
    ClusterIntrospectionSourceIndexValue value = 2;
  }

  message Item {
    ItemKey key = 1;
    ItemValue value = 2;
  }

  message Role {
    RoleKey key = 1;
    RoleValue value = 2;
  }

  message RoleAuth {
    RoleAuthKey key = 1;
    RoleAuthValue value = 2;
  }

  message NetworkPolicy {
    NetworkPolicyKey key = 1;
    NetworkPolicyValue value = 2;
  }

  message Schema {
    SchemaKey key = 1;
    SchemaValue value = 2;
  }

  message Setting {
    SettingKey key = 1;
    SettingValue value = 2;
  }

  message ServerConfiguration {
    ServerConfigurationKey key = 1;
    ServerConfigurationValue value = 2;
  }

  message SourceReferences {
    SourceReferencesKey key = 1;
    SourceReferencesValue value = 2;
  }

  message GidMapping {
    GidMappingKey key = 1;
    GidMappingValue value = 2;
  }

  message SystemPrivileges {
    SystemPrivilegesKey key = 1;
    SystemPrivilegesValue value = 2;
  }

  message StorageCollectionMetadata {
    StorageCollectionMetadataKey key = 1;
    StorageCollectionMetadataValue value = 2;
  }

  message UnfinalizedShard {
    UnfinalizedShardKey key = 1;
  }

  message TxnWalShard {
    TxnWalShardValue value = 1;
  }

  reserved 15;
  reserved "storage_usage";
  reserved 19;
  reserved "timestamp";
  reserved 22;
  reserved "persist_txn_shard";
  reserved 8;
  reserved "epoch";

  oneof kind {
    AuditLog audit_log = 1;
    Cluster cluster = 2;
    ClusterReplica cluster_replica = 3;
    Comment comment = 4;
    Config config = 5;
    Database database = 6;
    DefaultPrivileges default_privileges = 7;
    IdAlloc id_alloc = 9;
    ClusterIntrospectionSourceIndex cluster_introspection_source_index = 10;
    Item item = 11;
    Role role = 12;
    Schema schema = 13;
    Setting setting = 14;
    ServerConfiguration server_configuration = 16;
    GidMapping gid_mapping = 17;
    SystemPrivileges system_privileges = 18;
    StorageCollectionMetadata storage_collection_metadata = 20;
    UnfinalizedShard unfinalized_shard = 21;
    TxnWalShard txn_wal_shard = 23;
    SourceReferences source_references = 24;
    FenceToken fence_token = 25;
    NetworkPolicy network_policy = 26;
    RoleAuth role_auth = 27;
  }
}
