// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// buf breaking: ignore (does currently not require backward-compatibility)

syntax = "proto3";

import "repr/src/global_id.proto";

import "google/protobuf/empty.proto";

package mz_storage_client.statistics;

message ProtoSourceStatisticsUpdate {
    mz_repr.global_id.ProtoGlobalId id = 1;

    uint64 worker_id = 100;

    uint64 messages_received = 2;
    uint64 updates_staged = 3;
    uint64 updates_committed = 4;
    uint64 bytes_received = 5;

    uint64 envelope_state_records = 7;
    uint64 envelope_state_bytes = 6;
    optional int64 rehydration_latency_ms = 8;

    bool snapshot_committed = 11;
}

message ProtoSinkStatisticsUpdate {
    mz_repr.global_id.ProtoGlobalId id = 1;

    uint64 worker_id = 100;

    uint64 messages_staged = 2;
    uint64 messages_committed = 3;
    uint64 bytes_staged = 4;
    uint64 bytes_committed = 5;
}
